tests/invalid_make_int/parent2.child.m
%---------------------------------------------------------------------------%
% vim: ts=4 sw=4 et ft=mercury
%---------------------------------------------------------------------------%
%
% This is part of the test_nested.m test case.

:- module parent2:child.
:- interface.

:- type foo.

:- implementation.

:- type foo == int.
